# sparta

./: .gitignore  db.sqlite3  pyproject.toml
.github/workflows/: ci.yml
sparta/: settings.py
tabom/migrations/: 0001_initial.py
tabom/tests/: test_auto_now.py
